# CFG

./: .gitignore  CMakeLists.txt  README.md
syscall_list/: CMakeLists.txt
syscall_list/src/: aarch64_syscall_table.h  ast.hpp  elf.hpp  main.cpp  slicer.hpp  syscall_table.h
